fix(bio):fix column gap when timeline appears

--- a/_src/assets/scss/components/_bio.scss
+++ b/_src/assets/scss/components/_bio.scss
@@ -6,7 +6,7 @@ main {
     "skills profile info"
     "timeline timeline timeline";
   column-gap: 1.4688rem;
-  row-gap: 10rem;
+  // row-gap: 10rem;
   padding: 1rem;
 }
 
